crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_prompt_text_with_error_160x48.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────────────────────────────────────────────┐
┃(not available yet)                                                           ┃│(not available yet)                                                           │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                       ┌ New directory ───────────────────────────────┐                                                       │
┃                                                       │ ▶Name │ a/b                                  │                                                       │
┃                                                       │         ! A name cannot contain `/`          │                                                       │
┃                                                       │                                              │                                                       │
┃                                                       │              [ OK ]  [ Cancel ]              │                                                       │
┃                                                       └──────────────────────────────────────────────┘                                                       │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                                                                                                       F1 help  F10 quit
