crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_text_viewer_160x48.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│       ┌ Raw directory listing ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐       │
│       │ drwxr-xr-x  2 www www 4096 May  2 10:02 dir2                                                                                                 │       │
│       │ drwxr-xr-x  2 www www 4096 May  2 10:03 dir3                                                                                                 │       │
│       │ drwxr-xr-x  2 www www 4096 May  2 10:04 dir4                                                                                                 │       │
└───────│ drwxr-xr-x  2 www www 4096 May  2 10:05 dir5                                                                                                 │───────┘
┏▶Local │ drwxr-xr-x  2 www www 4096 May  2 10:06 dir6                                                                                                 │───────┐
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:07 dir7                                                                                                 │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:08 dir8                                                                                                 │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:09 dir9                                                                                                 │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:10 dir10                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:11 dir11                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:12 dir12                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:13 dir13                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:14 dir14                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:15 dir15                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:16 dir16                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:17 dir17                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:18 dir18                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:19 dir19                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:20 dir20                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:21 dir21                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:22 dir22                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:23 dir23                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:24 dir24                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:25 dir25                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:26 dir26                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:27 dir27                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:28 dir28                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:29 dir29                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:30 dir30                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:31 dir31                                                                                                │       │
┃       │ drwxr-xr-x  2 www www 4096 May  2 10:32 dir32                                                                                                │       │
┗━━━━━━━│ drwxr-xr-x  2 www www 4096 May  2 10:33 dir33                                                                                                │───────┘
┌ Queue │ drwxr-xr-x  2 www www 4096 May  2 10:34 dir34                                                                                                │───────┐
│(not av│ drwxr-xr-x  2 www www 4096 May  2 10:35 dir35                                                                                                │       │
│       │                                                                                                                                              │       │
│       │                                                                  [ Close ]                                                             3/200 │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                                                                                                       F1 help  F10 quit
