crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_text_viewer_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Me┌ Raw directory listing ───────────────────────────────────────────────┐───┐
│(no│ drwxr-xr-x  2 www www 4096 May  2 10:02 dir2                         │   │
│   │ drwxr-xr-x  2 www www 4096 May  2 10:03 dir3                         │   │
└───│ drwxr-xr-x  2 www www 4096 May  2 10:04 dir4                         │───┘
┏▶Lo│ drwxr-xr-x  2 www www 4096 May  2 10:05 dir5                         │───┐
┃(no│ drwxr-xr-x  2 www www 4096 May  2 10:06 dir6                         │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:07 dir7                         │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:08 dir8                         │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:09 dir9                         │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:10 dir10                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:11 dir11                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:12 dir12                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:13 dir13                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:14 dir14                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:15 dir15                        │   │
┃   │ drwxr-xr-x  2 www www 4096 May  2 10:16 dir16                        │   │
┗━━━│                                                                      │───┘
┌ Qu│                              [ Close ]                         3/200 │───┐
│(no└──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                       F1 help  F10 quit
